--- a/leetcode 0092. Reverse Linked List 2.ipynb
+++ b/leetcode 0092. Reverse Linked List 2.ipynb
@@ -11,6 +11,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "class Solution:\n",
+    "    def reverseBetween(self, head: ListNode, m: int, n: int) -> ListNode:\n",
+    "        #예외 처리\n",
+    "        if not head or m == n:\n",
+    "            return head\n",
+    "        \n",
+    "        root = start = ListNode(None)\n",
+    "        root.next = head\n",
+    "        # start, end 지정\n",
+    "        for _ in range(m-1):\n",
+    "            start = start.next\n",
+    "            \n",
+    "        end = start.next\n",
+    "        \n",
+    "        # 반복하면서 노드 차례대로 뒤집기\n",
+    "        for _ in range(n-m):\n",
+    "            t,p, start.next, end.next = start.next, end.next, end.next.next\n",
+    "            start.next.next = tmp\n",
+    "        return root.next"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
