--- a/leetcode 0024. Swap Nodes in Pairs.ipynb
+++ b/leetcode 0024. Swap Nodes in Pairs.ipynb
@@ -11,6 +11,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "class Solution:\n",
+    "    def swapPairs(self, head: ListNode) -> ListNode:\n",
+    "        node = head\n",
+    "    \n",
+    "        while node and node.next:\n",
+    "            # 값만 교환\n",
+    "            cur.val, cur.next.val = cur.next.val, cur.val\n",
+    "            cur = cur.next.next\n",
+    "        \n",
+    "        return head\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def swapPairs(self, head: ListNode) -> ListNode:\n",
+    "    root = prev = ListNode(None)\n",
+    "    prev.next = head\n",
+    "    while head and head.next:\n",
+    "        # b가 a(head)를 가리키도록 할당\n",
+    "        b = head.next\n",
+    "        head.next = b.next\n",
+    "        b.next = head\n",
+    "        \n",
+    "        # prev가 b를 가리키도록 할당\n",
+    "        prev.next = b\n",
+    "        \n",
+    "        # 다음번 비교를 위해 이동\n",
+    "        head = head.next\n",
+    "        prev = prev.next.next\n",
+    "    return root.next"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def swapPairs(self, head: ListNode) -> ListNode:\n",
+    "    if head and head.next:\n",
+    "        p = head.next\n",
+    "        # 스왑된 값 리턴 받음\n",
+    "        head.next = self.swapPairs(p.next)\n",
+    "        p.next = head\n",
+    "        return p\n",
+    "    return head"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
