--- a/leetcode 0328. Odd Even Linked List.ipynb
+++ b/leetcode 0328. Odd Even Linked List.ipynb
@@ -11,6 +11,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "class Solution:\n",
+    "    def oddEvenList(self, head: ListNode) -> ListNode:\n",
+    "        #예외처리\n",
+    "        if head is None:\n",
+    "            return None\n",
+    "        \n",
+    "        odd = head\n",
+    "        even = head.next\n",
+    "        even_head = head.next\n",
+    "        \n",
+    "        # 반복하면서 홀짝 노드 처리\n",
+    "        while even and even.next:\n",
+    "            odd.next, even.next = odd.next.next, even.next.next\n",
+    "            odd, even = odd.next, even.next\n",
+    "            \n",
+    "        # 홀수 노드의 마지막을 짝수 헤드로 연결\n",
+    "        odd.next = even_head\n",
+    "        return head"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
