--- a/leetcode 0225. Implement Stack using Queues.ipynb
+++ b/leetcode 0225. Implement Stack using Queues.ipynb
@@ -35,14 +35,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## List 이용    \n",
+    "## List 이용    -  문제 의도와는 맞지x\n",
     "\n",
     "append, pop, insert"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
     "        \"\"\"\n",
     "        Removes the element on top of the stack and returns that element.\n",
     "        \"\"\"\n",
-    "        self.lst.pop()           # 스택의 첫번째 요소 = 리스트의 맨 뒤의 원소 꺼내기 \n",
+    "        self.lst.pop()          \n",
     "\n",
     "        \n",
     "    def top(self) -> int:\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
     "        Removes the element on top of the stack and returns that element.\n",
     "        \"\"\"\n",
     "\n",
-    "        return self.q1.get()             # 첫번째 요소 제거\n",
+    "        return self.q1.get()             \n",
     "        \n",
     "    def top(self) -> int:\n",
     "        \"\"\"\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
