--- a/leetcode 0771. Jewels and Stones.ipynb
+++ b/leetcode 0771. Jewels and Stones.ipynb
@@ -15,13 +15,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 처음에 생각한 풀이"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -44,13 +37,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 해시 테이블을 이용한 풀이"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -70,7 +56,7 @@
     "                \n",
     "                \n",
     "        # 보석 빈도수 합산\n",
-    "        for char in J:                  # 보석에 있는 문자들(key)이\n",
+    "        for char in J:                  # 보석에 있는 문자들이\n",
     "            if char in freq:            # 해쉬 테이블에 있다면\n",
     "                count += freq[char]     # value 합산하기\n",
     "                \n",
@@ -82,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### defaultdict 활용"
+    "#### defaultdict 활용 - 비교 생략"
    ]
   },
   {
@@ -108,6 +94,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### counter - 계산 생략"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -115,11 +108,11 @@
    "source": [
     "class Solution:\n",
     "    def numJewelsInStones(self, jewels: str, stones: str) -> int:\n",
-    "        freq = collections.Counter(S)       # S 빈도수 계산\n",
+    "        freq = collections.Counter(stones)       # S 빈도수 계산\n",
     "        count = 0\n",
     "        \n",
     "        # 보석 빈도수 합산\n",
-    "        for char in J:\n",
+    "        for char in jewels:\n",
     "            count += freq[char]\n",
     "            \n",
     "        return count"
@@ -138,17 +131,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def numJewelsInStones(self, jewels: str, stones: str) -> int:\n",
+    "        count =0\n",
+    "        for i in range(len(jewels)):\n",
+    "            count+=stones.count(jewels[i])\n",
+    "        return count"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a.count('7')"
+   ]
   },
   {
    "cell_type": "code",
