--- a/leetcode 0078. Subsets.ipynb
+++ b/leetcode 0078. Subsets.ipynb
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "posted-boundary",
+   "id": "anticipated-spouse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,35 +97,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fitting-photograph",
-   "metadata": {},
-   "source": [
-    "#### Runtime: 20 ms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "removable-brick",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Solution:\n",
-    "    def subsets(self, nums: List[int]) -> List[List[int]]:\n",
-    "        l = len(nums)\n",
-    "        ans = []\n",
-    "        for n in range(2**l):\n",
-    "            cur = []\n",
-    "            mask = bin(n)[2:]\n",
-    "            offset = l - len(mask)\n",
-    "            for i, m in enumerate(mask):\n",
-    "                if m == \"1\": cur.append(nums[i + offset])\n",
-    "            ans.append(cur)\n",
-    "        return ans"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "oriental-concentrate",
    "metadata": {},
    "source": [
@@ -149,9 +120,17 @@
     "            for curr in output:\n",
     "                opt += [curr + [num]]\n",
     "                #print(curr)\n",
-    "            output.extend(opt)\n",
+    "            output.extend(opt) # 반복한 모든 항목 집어넣기\n",
     "        return output"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "executive-girlfriend",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
