--- a/leetcode 0332. Reconstruct Itinerary.ipynb
+++ b/leetcode 0332. Reconstruct Itinerary.ipynb
@@ -5,7 +5,8 @@
    "id": "varied-aruba",
    "metadata": {},
    "source": [
-    "## [from, to] 로 구성된 항공권 목록을 이용해 JFK에서 출발하는 여행 일정을 구성하라. 여러 일정이 있는 경우 사전 어휘 순(Lexical Order)으로 방문한다."
+    "## [from, to] 로 구성된 항공권 목록을 이용해 JFK에서 출발하는 여행 일정을 구성하라. \n",
+    "## 여러 일정이 있는 경우 사전 어휘 순(Lexical Order)으로 방문한다."
    ]
   },
   {
@@ -14,7 +15,29 @@
    "id": "broadband-henry",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def findItinerary(self, tickets: List[List[str]]) -> List[str]:\n",
+    "        graph = collections.defaultdict(list)\n",
+    "        \n",
+    "        # 그래프를 뒤집어서 구성\n",
+    "        for a, b in sorted(tickets, reverse=True):\n",
+    "            graph[a].append(b)\n",
+    "            \n",
+    "        route = []\n",
+    "        def dfs(a):\n",
+    "            # 마지막 값을 읽어 어휘 순 방문\n",
+    "            while graph[a]:\n",
+    "                dfs(graph[a].pop())\n",
+    "                \n",
+    "            route.append(a)\n",
+    "            \n",
+    "        dfs('JFK')\n",
+    "        \n",
+    "        # 다시 뒤집어 어휘 순 결과로\n",
+    "        return route[::-1]\n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
